--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,26 @@
     @apply bg-background text-foreground;
   }
 }
+
+:root{
+  --dark :#434343;
+  --light:#f1f1f1;
+  --grey:#292929;
+  --black:#000
+}
+body{margin:0;width:100%;height:100%;background-color: var(--dark );color:var(--light)}
+*{color:var(--light)}
+
+.border-r{border-right:1px solid #ddd}
+.table th, .table td{color:#fff}
+.mb-4{margin-bottom: 50px;}
+.bg-grey{background-color: var(--grey);border:1px solid var(--black)}
+.text-light{color: var(--light);}
+.text-light p{color: var(--light);}
+.leftNav{background-color: #ddd;height:100%}
+.leftNav li p{padding:10px 15px;}
+.leftNav>li p{ color: #292929; border-bottom: 1px solid #d2d2d2;}
+.leftNav li>ul>li>p{padding-left:30px}
+.leftNav li>ul>li>ul>li>p{padding-left:40px}
+ul.hide{display:none}
+ul.show{display: block;}
